--- a/gpio-server/Makefile
+++ b/gpio-server/Makefile
@@ -1,36 +1,40 @@
-##############################################################
-.PHONY : clean clean_all
-##############################################################
-
-##############################################################
+###############################################################################
 # compiler setting
-##############################################################
-CC      = gcc
-CFLAGS  = -g -Wall
-LIBS    = -lm
-INCPATH =
+###############################################################################
+CC       = gcc
+CXX      = g++
+CFLAGS   = -g -Wall
+CXXFLAGS = $(CFLAGS) -Weffc++
+LIBS     = -lm
+INCPATH  =
 DIR     = $(shell pwd)
 
-##############################################################
+###############################################################################
 # source files setting
-##############################################################
-C_SOURCES = $(shell find . -name "*.c")
-C_OBJS    = $(patsubst %.c,%.o,$(wildcard $(C_SOURCES)))
-OBJS      = $(C_OBJS)
+###############################################################################
+C_SOURCES   = $(shell find . -name "*.c")
+CXX_SOURCES = $(shell find . -name "*.cpp")
+C_OBJS      = $(patsubst %.c,%.o,$(wildcard $(C_SOURCES)))
+CXX_OBJS    = $(patsubst %.cpp,%.o,$(wildcard $(CXX_SOURCES)))
+OBJS        = $(C_OBJS) $(CXX_OBJS)
 EXEC      = $(shell basename $(DIR))
 
-
+###############################################################################
+.PHONY : clean clean_all
+###############################################################################
 all: $(EXEC)
 
 %.o:%.c
 	$(CC) -c $(CFLAGS) $(INCPATH) $< -o $@
+%.o:%.cpp
+	$(CXX) -c $(CXXFLAGS) $(INCPATH) $< -o $@
 
 $(EXEC): $(OBJS)
-	$(CC) $(OBJS) -o $(EXEC) $(LIBS)
+	$(CXX) $(OBJS) -o $(EXEC) $(LIBS)
 
-##############################################################
+###############################################################################
 clean:
 	@rm -vfr $(OBJS)
 clean_all: clean
 	@rm -vfr $(EXEC)
-##############################################################
+###############################################################################
